<resources>
    <string name="email">Email</string>
    <string name="welcome_title">BEM-VINDO AO EMPRESAS</string>
    <string name="welcome_description">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="password">Senha</string>
    <string name="enter">ENTRAR</string>
    <string name="invalid_credentials">Credenciais informadas são inválidas, tente novamente.</string>
</resources>